# cloudpipe

./: .gitignore  README.md  setup.cfg
cloudpipe/: __init__.py  aws.py  init_cloud.py  main.py  step_define.py  types.py
tests/: test_basic.py  test_multi.py
