[metadata]
name = cloudpipe
version = 0.0.1
author = Sankho Sarkar
author_email = sankho.turjo@gmail.com
description = Simplify your serverless cloud applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sankho-t/cloudpipe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = cloudpipe
python_requires = >=3.6
